--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -148,6 +148,7 @@ html,body {
           background: $lightgray;
           border-radius:5px;
           position:relative;
+          cursor:pointer;
           .pointnow{
             position:absolute;
             top:-4px;
