--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -57,6 +57,7 @@ html,body {
               height:80%;
               z-index:99;
               top:0;
+              text-align:center;
               li{
                 height:30px;
                 line-height:30px;
