--- a/src/sass/responsive.scss
+++ b/src/sass/responsive.scss
@@ -2,11 +2,11 @@
 $mq-responsive: true;
 $mq-breakpoints: (
         mobile:  320px,
-        tablet:  740px,
+        mobileLandscape: 480px,
+        tablet:  768px,
         desktop: 980px,
         wide:    1300px,
-        desktopAd: 810px,
-        mobileLandscape: 480px
+        desktopAd: 810px
 );
 $mq-static-breakpoint: desktop;
 $mq-show-breakpoints: (mobile, mobileLandscape, tablet, desktop, wide);
@@ -28,6 +28,7 @@ $mq-show-breakpoints: (mobile, mobileLandscape, tablet, desktop, wide);
     width:35%;
   }
 }
+
 #playlist{
   @include mq($until: mobile) {
     position:absolute;
@@ -65,6 +66,7 @@ $mq-show-breakpoints: (mobile, mobileLandscape, tablet, desktop, wide);
     display:block!important;
   }
 }
+
 .songitem{
   @include mq($until: mobile) {
     margin:0;
@@ -100,6 +102,7 @@ $mq-show-breakpoints: (mobile, mobileLandscape, tablet, desktop, wide);
     width:20%;
   }
 }
+
 .list{
   @include mq($until: mobile) {
     display:block;
@@ -117,6 +120,7 @@ $mq-show-breakpoints: (mobile, mobileLandscape, tablet, desktop, wide);
     display:none;
   }
 }
+
 .backtoplayer{
   @include mq($until: mobile) {
     display:inline-block;
